force-app/main/default/objects/ContentVersion/fields/AFSC__Ref_Replaced_Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Ref_Replaced_Content_Document_Id__c</fullName>
    <externalId>true</externalId>
    <label>Replaced Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>