force-app/main/default/objects/ContentVersion/fields/AFSC__Replaced_Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Replaced_Content_Document_Id__c</fullName>
    <label>DEPRECATED Replaced Content Document Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>