force-app/main/default/objects/ContentVersion/fields/AFSC__SHA1__c.field-meta.xml
<CustomField>
    <fullName>AFSC__SHA1__c</fullName>
    <label>SHA1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>