force-app/main/default/objects/ContentVersion/fields/AFSC__Warning_MAC__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Warning_MAC__c</fullName>
    <label>Warning MAC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>